--- a/main/resources/assets/mfs/lang/ja_JP.lang
+++ b/main/resources/assets/mfs/lang/ja_JP.lang
@@ -3,6 +3,9 @@ death.attack.propellor.player=%1$s が戦いながらプロペラに切られて
 entity.mfs.Chest.name=機体 Chest
 
 item.MC172.name=MC-172
+item.PZLP11.name=PZL P.11
+item.Otter.name=Twin Otter
+item.Trimotor.name=Trimotor
 item.Seat.name=座席
 item.WheelSmall.name=小さい車輪
 item.WheelLarge.name=大きい車輪
