Tweaked lang file to reflect plane GUI shift.

--- a/main/resources/assets/mfs/lang/en_US.lang
+++ b/main/resources/assets/mfs/lang/en_US.lang
@@ -51,4 +51,4 @@ item.FlightInstrument14.description=Indicates oil pressure (NO USE).
 
 itemGroup.tabMFS=Minecraft Flight Simulator
 key.categories.mfs=Minecraft Flight Simulator
-key.config=Open Key Configuration
+key.config=Open Plane GUI/ Key Configuration 
