Added pontoon and overhauled landing gear code.

--- a/main/resources/assets/mfs/lang/en_US.lang
+++ b/main/resources/assets/mfs/lang/en_US.lang
@@ -7,6 +7,8 @@ item.PZLP11.name=PZL P.11
 item.Otter.name=Twin Otter
 item.Trimotor.name=Trimotor
 item.Seat.name=Seat
+item.Skid.name=Skid
+item.Pontoon.name=Pontoon
 item.WheelSmall.name=Small Wheel
 item.WheelLarge.name=Large Wheel
 item.Propeller_0.name=Wooden Propeller
