--- a/main/resources/assets/mfs/lang/ja_JP.lang
+++ b/main/resources/assets/mfs/lang/ja_JP.lang
@@ -7,6 +7,8 @@ item.PZLP11.name=PZL P.11
 item.Otter.name=Twin Otter
 item.Trimotor.name=Trimotor
 item.Seat.name=座席
+item.Skid.name=Skid
+item.Pontoon.name=Pontoon
 item.WheelSmall.name=小さい車輪
 item.WheelLarge.name=大きい車輪
 item.Propeller_0.name=木のプロペラ
