--- a/main/resources/assets/mfs/lang/ru_RU.lang
+++ b/main/resources/assets/mfs/lang/ru_RU.lang
@@ -33,7 +33,7 @@ item.FlightInstrument3.description=Показывает скорость
 item.FlightInstrument4.name=Указатель крена
 item.FlightInstrument4.description=Показывает угол крена
 item.FlightInstrument5.name=Указатель поворота и скольжения
-item.FlightInstrument5.description=Показывает угол поворота и крена.
+item.FlightInstrument5.description=Показывает угол поворота и крена
 item.FlightInstrument6.name=Вариометр
 item.FlightInstrument6.description=Показывает скорость подъема
 item.FlightInstrument7.name=Индикатор перегрузок
@@ -47,9 +47,9 @@ item.FlightInstrument10.description=Показывает обороты двиг
 item.FlightInstrument11.name=Датчик топлика
 item.FlightInstrument11.description=Показывает уровень топлива
 item.FlightInstrument12.name=Датчик расхода топлива
-item.FlightInstrument12.description=Показывает расход топлива.
+item.FlightInstrument12.description=Показывает расход топлива
 item.FlightInstrument13.name=Датчик температуры двигателя
-item.FlightInstrument13.description=Показывает температуру двигателя (не используется).
+item.FlightInstrument13.description=Показывает температуру двигателя
 item.FlightInstrument14.name=Датчик давления масла
 item.FlightInstrument14.description=Показывает давление масла (не использовать).
 
