--- a/main/resources/assets/mfs/lang/ja_JP.lang
+++ b/main/resources/assets/mfs/lang/ja_JP.lang
@@ -1,8 +1,9 @@
 #Translated by sotakan0808
 
-﻿death.attack.propellor=%1$s がプロペラに当たって千切りになった！.
+death.attack.propellor=%1$s がプロペラに当たって千切りになった！.
 death.attack.propellor.player=%1$s が戦いながらプロペラに粉砕されていった！ %2$s
 entity.mfs.Chest.name=機体 Chest
+tile.PropellerBench.name=Propeller Bench
 
 item.MC172.name=MC-172
 item.PZLP11.name=PZL P.11
