Added Vulcanair to lang files.

--- a/main/resources/assets/mfs/lang/ja_JP.lang
+++ b/main/resources/assets/mfs/lang/ja_JP.lang
@@ -7,6 +7,7 @@ tile.PropellerBench.name=Propeller Bench
 
 item.MC172.name=MC-172
 item.PZLP11.name=PZL P.11
+item.Vulcanair.name=Vulcanair
 item.Otter.name=Twin Otter
 item.Trimotor.name=Trimotor
 item.Seat.name=座席
