--- a/main/resources/assets/mfs/lang/ru_RU.lang
+++ b/main/resources/assets/mfs/lang/ru_RU.lang
@@ -7,6 +7,7 @@ tile.PropellerBench.name=Propeller Bench
 
 item.MC172.name=MC-172
 item.PZLP11.name=PZL P.11
+item.Vulcanair.name=Vulcanair
 item.Otter.name=Турбовинтовой
 item.Trimotor.name=Трехмоторный
 item.Seat.name=Cиденье
