--- a/main/resources/assets/mfs/lang/ru_RU.lang
+++ b/main/resources/assets/mfs/lang/ru_RU.lang
@@ -2,7 +2,7 @@
 
 death.attack.propellor=%1$s был разорвать винтом.
 death.attack.propellor.player=%1$s был разорвать винтом в полете %2$s
-entity.mfs.Chest.name=Сундук самолета
+entity.mfs.PlaneChest.name=Сундук самолета
 tile.PropellerBench.name=Propeller Bench
 
 item.MC172.name=MC-172
