Added trim gauge and recipe.  Tweaked trim limits.  Fixed color bug in dial pointers.

--- a/main/resources/assets/mfs/lang/en_US.lang
+++ b/main/resources/assets/mfs/lang/en_US.lang
@@ -40,8 +40,8 @@ item.FlightInstrument6.name=Vertical Speed Indicator
 item.FlightInstrument6.description=Indicates climb rate.
 item.FlightInstrument7.name=Lift Reserve Indicator
 item.FlightInstrument7.description=Indicates lift potential.
-item.FlightInstrument8.name=DUMMY
-item.FlightInstrument8.description=
+item.FlightInstrument8.name=Trim Indicator
+item.FlightInstrument8.description=Indicates trim positions.
 item.FlightInstrument9.name=DUMMY
 item.FlightInstrument9.description=
 item.FlightInstrument10.name=Tachometer
