--- a/main/resources/assets/mfs/lang/ja_JP.lang
+++ b/main/resources/assets/mfs/lang/ja_JP.lang
@@ -40,8 +40,8 @@ item.FlightInstrument6.name=昇降計
 item.FlightInstrument6.description=上昇、降下率を表示する
 item.FlightInstrument7.name=LRI
 item.FlightInstrument7.description=上昇可能率を表示する
-item.FlightInstrument8.name=DUMMY
-item.FlightInstrument8.description=
+item.FlightInstrument8.name=Trim Indicator
+item.FlightInstrument8.description=Indicates trim positions.
 item.FlightInstrument9.name=DUMMY
 item.FlightInstrument9.description=
 item.FlightInstrument10.name=回転計
