--- a/main/resources/assets/mfs/lang/ru_RU.lang
+++ b/main/resources/assets/mfs/lang/ru_RU.lang
@@ -40,8 +40,8 @@ item.FlightInstrument6.name=Вариометр
 item.FlightInstrument6.description=Показывает скорость подъема
 item.FlightInstrument7.name=Индикатор перегрузок
 item.FlightInstrument7.description=Показывает чило Маха
-item.FlightInstrument8.name=DUMMY
-item.FlightInstrument8.description=
+item.FlightInstrument8.name=Trim Indicator
+item.FlightInstrument8.description=Indicates trim positions.
 item.FlightInstrument9.name=DUMMY
 item.FlightInstrument9.description=
 item.FlightInstrument10.name=Тахометр
