--- a/main/resources/assets/mfs/lang/ru_RU.lang
+++ b/main/resources/assets/mfs/lang/ru_RU.lang
@@ -1,7 +1,15 @@
 #Translated by Minddao
 
-death.attack.propellor=%1$s был разорвать винтом.
-death.attack.propellor.player=%1$s был разорвать винтом в полете %2$s
+death.attack.propellor.null.null=%1$s was shredded by a propeller.
+death.attack.propellor.null.player=%1$s was was shredded by a propeller while fighting %2$s
+death.attack.propellor.player.null=%1$s was killed by %2$s using a propeller.
+death.attack.propellor.player.player=%1$s was was killed by %2$s using propeller while fighting %3$s
+
+death.attack.planecrash.null.null=%1$s died in a plane crash.
+death.attack.planecrash.null.player=%1$s got distracted while fighting %2$s and died in a plane crash.
+death.attack.planecrash.player.null=%2$s crashed their plane and killed %1$s.
+death.attack.planecrash.player.player=%1$s got distracted while fighting %2$s and let %3$s crash the plane.
+
 entity.mfs.PlaneChest.name=Сундук самолета
 tile.PropellerBench.name=Propeller Bench
 
