--- a/main/resources/assets/mfs/lang/ja_JP.lang
+++ b/main/resources/assets/mfs/lang/ja_JP.lang
@@ -62,6 +62,8 @@ item.FlightInstrument13.name=温度計
 item.FlightInstrument13.description=エンジンの温度が表示される
 item.FlightInstrument14.name=油圧計
 item.FlightInstrument14.description=油圧を表示する (NO USE).
+item.FlightInstrument15.name=Electrical Gauge
+item.FlightInstrument15.description=Indicates electrical power and usage.
 
 itemGroup.tabMFS=Minecraft Flight Simulator
 key.categories.mfs=Minecraft Flight Simulator
