--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -124,47 +124,48 @@ item.wheellarge.name=Large Wheel
 item.propeller0.name=Wooden Propeller
 item.propeller1.name=Iron Propeller
 item.propeller2.name=Obsidian Propeller
-item.engine0.name=Small Airplane Engine
-item.engine1.name=Large Airplane Engine
+item.engineaircraftsmall.name=Small Airplane Engine
+item.engineaircraftlarge.name=Large Airplane Engine
 item.engine2.name=Helicopter Engine
 item.engine3.name=Car Engine
 
 item.wrench.name=Wrench
-item.flightinstrumentbase.name=Flight Instrument Base
 item.pointershort.name=Short Instrument Pointer
 item.pointerlong.name=Long Instrument Pointer
-item.flightinstrument0.name=Attitude Indicator
-item.flightinstrument0.description=Indicates where the plane is pointing.
-item.flightinstrument1.name=Altimeter
-item.flightinstrument1.description=Indicates height.
-item.flightinstrument2.name=Heading Indicator
-item.flightinstrument2.description=Indicates heading direction.
-item.flightinstrument3.name=Airspeed Indicator
-item.flightinstrument3.description=Indicates speed.
-item.flightinstrument4.name=Turn Coordinator
-item.flightinstrument4.description=Indicates bank rate and slip.
-item.flightinstrument5.name=Turn and Slip Indicator
-item.flightinstrument5.description=Indicates turn rate and slip.
-item.flightinstrument6.name=Vertical Speed Indicator
-item.flightinstrument6.description=Indicates climb rate.
-item.flightinstrument7.name=Lift Reserve Indicator
-item.flightinstrument7.description=Indicates lift potential.
-item.flightinstrument8.name=Trim Indicator
-item.flightinstrument8.description=Indicates trim positions.
-item.flightinstrument9.name=DUMMY
-item.flightinstrument9.description=
-item.flightinstrument10.name=Tachometer
-item.flightinstrument10.description=Indicates engine speeds.
-item.flightinstrument11.name=Fuel Gauge
-item.flightinstrument11.description=Indicates fuel.
-item.flightinstrument12.name=Fuel Flow Gauge
-item.flightinstrument12.description=Indicates fuel consumption rate.
-item.flightinstrument13.name=Engine Temperature Gauge
-item.flightinstrument13.description=Indicates engine temperature.
-item.flightinstrument14.name=Oil Pressure Gauge
-item.flightinstrument14.description=Indicates oil pressure.
-item.flightinstrument15.name=Electrical Gauge
-item.flightinstrument15.description=Indicates electrical power and usage.
+item.flightinstrument0.name=Flight Instrument Base
+item.flightinstrument0.description=Base component for instruments.
+item.flightinstrument1.name=Attitude Indicator
+item.flightinstrument1.description=Indicates where the plane is pointing.
+item.flightinstrument2.name=Altimeter
+item.flightinstrument2.description=Indicates height.
+item.flightinstrument3.name=Heading Indicator
+item.flightinstrument3.description=Indicates heading direction.
+item.flightinstrument4.name=Airspeed Indicator
+item.flightinstrument4.description=Indicates speed.
+item.flightinstrument5.name=Turn Coordinator
+item.flightinstrument5.description=Indicates bank rate and slip.
+item.flightinstrument6.name=Turn and Slip Indicator
+item.flightinstrument6.description=Indicates turn rate and slip.
+item.flightinstrument7.name=Vertical Speed Indicator
+item.flightinstrument7.description=Indicates climb rate.
+item.flightinstrument8.name=Lift Reserve Indicator
+item.flightinstrument8.description=Indicates lift potential.
+item.flightinstrument9.name=Trim Indicator
+item.flightinstrument9.description=Indicates trim positions.
+item.flightinstrument10.name=DUMMY
+item.flightinstrument10.description=
+item.flightinstrument11.name=Tachometer
+item.flightinstrument11.description=Indicates engine speeds.
+item.flightinstrument12.name=Fuel Gauge
+item.flightinstrument12.description=Indicates fuel.
+item.flightinstrument13.name=Fuel Flow Gauge
+item.flightinstrument13.description=Indicates fuel consumption rate.
+item.flightinstrument14.name=Engine Temperature Gauge
+item.flightinstrument14.description=Indicates engine temperature.
+item.flightinstrument15.name=Oil Pressure Gauge
+item.flightinstrument15.description=Indicates oil pressure.
+item.flightinstrument16.name=Electrical Gauge
+item.flightinstrument16.description=Indicates electrical power and usage.
 
 entity.mts.Chest.name=Chest
 tile.propellerbench.name=Propeller Bench
