--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -9,11 +9,6 @@ death.attack.planecrash.null.null=%1$s died in a plane crash.
 death.attack.planecrash.null.player=%1$s got distracted while fighting %2$s and died in a plane crash.
 death.attack.planecrash.player.null=%2$s crashed their plane and killed %1$s.
 death.attack.planecrash.player.player=%1$s got distracted while fighting %2$s and let %3$s crash the plane.
-
-death.attack.traincrash.null.null=%1$s died in a train crash.
-death.attack.traincrash.null.player=%1$s got distracted while fighting %2$s and died in a train crash.
-death.attack.traincrash.player.null=%2$s crashed their train and killed %1$s.
-death.attack.traincrash.player.player=%1$s got distracted while fighting %2$s and let %3$s crash the train.
  
 interact.key.info.lock=Vehicle locked!
 interact.key.info.unlock=Vehicle unlocked!
@@ -133,6 +128,7 @@ item.engine3.name=Car Engine
 
 item.wrench.name=Wrench
 item.key.name=Key
+item.manual.name=MTS Manual (READ ME!)
 item.pointershort.name=Short Instrument Pointer
 item.pointerlong.name=Long Instrument Pointer
 item.instrument_aircraft_blank.name=Flight Instrument Base
@@ -174,3 +170,45 @@ tile.propellerbench.name=Propeller Bench
 itemGroup.tabMTSPlanes=Minecraft Transport Simulator
 key.categories.mts=Minecraft Transport Simulator
 key.config=Open configuration screen 
+
+manual.introduction.title=Introduction
+manual.introduction.1=Thank you for downloading Minecraft Transport Simulator, the new and improved version of Minecraft Flight Simulator!  This manual contains most anything you might care to know about this mod, so please read closely.
+manual.introduction.2=It's STRONGLY recommended you read the portions on flight if you plan on piloting MTS planes, especially if you haven't had experience with planes outside of video games or are used to the physics in Flan's/MCHeli.
+manual.introduction.3=If you haven't downloaded a content pack now would be a good time to do so.  There's an official pack on Curse, however you are more than welcome to download third-party packs or make your own creations.  See the JSON section for more details.
+manual.introduction.4=If there's something that is not included in this manual please see the MTS team on Discord as we don't check MCF or Curse regularly.  We'll be happy to answer your question and add it to the manual in a later update.
+manual.introduction.5=One final note: every manual keeps their place when closed individually, so you can have multiple copies turned to specific sections that you reference frequently.  You can also scroll through this manual with your mouse wheel.
+
+manual.basic_crafting.title=Basic Crafting
+manual.basic_crafting.1=Crafting MTS components is relatively straightforward.  Most of the time you'll just use a crafting bench like normal, so consult NEI or an equivalent for the current recipes.
+manual.basic_crafting.2=The only exception to this is airplane propellers, which require a propeller bench to be created due to their complexity.  Please consult the Propeller Specs section for more detailed information.
+manual.basic_crafting.3=If you're looking to edit the recipes of vehicles you can do so though the JSON to suit your taste.  This is helpful if you don't have Minetweaker installed or available.
+manual.basic_crafting.4=Recipes for vehicles can be viewed in the Vehicle Data section, along with a few of their properties.  Use this information to chose a vehicle that suits your needs.
+
+manual.vehicle_assembly.title=Vehicle Assembly
+manual.vehicle_assembly.1=Assembling vehicles is a simple as clicking them with the required parts.  These are listed in the Vehicle Data section should you be confused as to what parts a vehicle can accept.
+manual.vehicle_assembly.2=When clicked with a part, a vehicle will automatically attempt to attach it in the closet part location.  For parts like seats it lets you chose which seat goes where.  Handy if you want to color-coordinate airplanes.
+manual.vehicle_assembly.3=The only exception to this rule is, once again, propellers.  They must be attached to engines rather than the vehicles themselves.
+manual.vehicle_assembly.4=Parts may be removed by using a wrench.  Wrenches may also be used to destroy the whole vehicle.  This this will give back the parts on the vehicle, but NOT the vehicle item itself, so only use if you're clearing wreckage.
+manual.vehicle_assembly.5=All players have the ability to 'work' on un-owned vehicles.  It is recommended you invest in keys if you need security.  Check the Theft Prevention section for more details on key workings.
+manual.vehicle_assembly.6=Vehicles may not be worked on from inside them for obvious reasons.  If you were expecting to repair a failing engine mid-flight you're out of luck.
+manual.vehicle_assembly.7=It is not recommended that you work on vehicles in close quarters as they have been known to bind in their collision and possibly explode.  Please plan your garages and hangars to take this into account.
+
+manual.fueling.title=Fueling
+manual.fueling.1=Vehicles can be fueled from the fuel pump block.  Just pull up to a fuel pump and click it.  Then click the vehicle you want to fuel.
+manual.fueling.2=If the connection is successful a hose will appear from the fuel pump to the vehicle.  The pump will then transfer fuel at a rate of 10 mb/t.
+manual.fueling.3=The pump itself has a 15000mb reservoir and can be filled directly from liquid-holding containers or from pipe systems compatible with the Forge liquid standard.
+manual.fueling.4=The exact liquid used for fuel is determined by the settings in the config file.  When MTS is started it looks for all Forge liquids and stores them there.
+manual.fueling.5=Change any fuel value to something above 0.0 to tell MTS the liquid is a valid fuel.  Note the number is a ratio of how much the fuel fills the tanks of vehicles, not the potency of the fuel.
+manual.fueling.6=Higher-numbered fuels will NOT make vehicles run longer than lower-numbered fuels.  Adjust fuel potencey using the FuelUsageFactor in the config instead, or use a fuel-less engine from the creative inventory.
+
+manual.controls.title=Controls
+manual.controls.1=MTS offers multiple control schemes.  The standard scheme is the keyboard control.
+manual.controls.2=Unlike other mods, MTS is equipped with a no-bind system.  This prevents it from clogging up keybindings in the configuration menu and from intercepting and taking other mod's keystrokes.
+manual.controls.3=Configuration for this mode, and the other control modes, can be activated by pressing the config key (P by default) to bring up the configuration menu.
+manual.controls.4=This key is the only one that's bound in the standard way in the controls menu, and may be double-bound by default in some modpacks, so if you can't bring up the config menu check your keybindings.
+manual.controls.5=Do note that while MTS will not block other mod's key signals, it may still be affected by the signals of other mods who do not use context-sensitive triggers.  Keep this in mind when controlling vehicles.
+manual.controls.6=The second control scheme is a Joystick-Keyboard hybrid.  Any controller that shows up as a configurable joystick can be used with MTS for specific actions.
+manual.controls.7=This controller must be connected at the time you start Minecraft to allow the Java systems to detect and load it.  Configuration of buttons is done though the JOYSTICK section of the P-key MTS CONFIG menu.
+manual.controls.8=When an axis such as yaw or pitch is being controlled by a joystick it will be unavailable on the keyboard.  Regular buttons like the brakes will also be disabled, but can be re-enabled though a config setting if desired.
+manual.controls.9=The final method of control available is a mouse-yoke system similar to both Flan's and MCHeli.  This system is currently in Beta and is not perfect, but should be functional enough for general use.
+manual.controls.10=There are a few extra settings in the main MTS config file and in the P-key CONFIG menu.  These can be used to control joystick dead-zone, sensitivity, keyboard cooldown, as well as other general control settings.   
