Finished manual.  Added packet to keep page number synced from client to server.

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -231,3 +231,4 @@ manual.vehicle_data.fuel=Fuel Capacity
 manual.vehicle_data.controllers=Drivers/Pilots
 manual.vehicle_data.passengers=Seats/Cargo
 manual.vehicle_data.cargo=Cargo Only
+manual.vehicle_data.components=Components
