Added lang definition for Fuel Pump.

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -167,6 +167,7 @@ item.instrument_aircraft_oilpressure.description=Indicates oil pressure.
 
 entity.mts.chest.name=Chest
 tile.propellerbench.name=Propeller Bench
+tile.fuelpump.name=Fuel Pump
 
 itemGroup.tabMTSPlanes=Minecraft Transport Simulator
 key.categories.mts=Minecraft Transport Simulator
