Removed unused methods and changed creative tab name.

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -174,7 +174,7 @@ tile.fuelpump.name=Fuel Pump
 tile.fuelpump.level=LVL:
 tile.fuelpump.dispensed=DISP:
 
-itemGroup.tabMTSPlanes=Minecraft Transport Simulator
+itemGroup.tabMTS=Minecraft Transport Simulator
 key.categories.mts=Minecraft Transport Simulator
 key.config=Open configuration screen 
 
