--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -176,7 +176,40 @@ tile.fuelpump.dispensed=DISP:
 
 itemGroup.tabMTS=Minecraft Transport Simulator
 key.categories.mts=Minecraft Transport Simulator
-key.config=Open configuration screen 
+key.config=Open configuration screen
+
+achievement.rtfm=RTFM!
+achievement.rtfm.desc=Craft a manual!
+achievement.engine_aircraft_small=In thrust we trust!
+achievement.engine_aircraft_small.desc=Craft a small aircraft engine.
+achievement.engine_aircraft_overhaul=Time for an overhaul!
+achievement.engine_aircraft_overhaul.desc=Overhaul an engine with some obsidian.
+achievement.engine_aircraft_large=Radical radials!
+achievement.engine_aircraft_large.desc=Craft a large aircraft engine.
+achievement.propeller_bench=Milling about.
+achievement.propeller_bench.desc=Craft a propeller bench.
+achievement.propeller=Propwash!
+achievement.propeller.desc=Create a propeller in a Propeller Bench.
+achievement.propeller_fits=Perfect fit!
+achievement.propeller_fits.desc=Attach a propeller to an engine.
+achievement.propeller_too_big=Where's that manual?
+achievement.propeller_too_big.desc=Try to attach too big a propeller to an engine.
+achievement.wheel=The wheel deal.
+achievement.wheel.desc=Craft a wheel.
+achievement.pontoon=Flying boats!
+achievement.pontoon.desc=Craft a set of pontoons.
+achievement.wheel_pop=Blowout!
+achievement.wheel_pop.desc=Blowout a wheel by damaging it.
+achievement.wrench=Mechanically inclined.
+achievement.wrench.desc=Craft a wrench.
+achievement.instrument=Instrumental!
+achievement.instrument.desc=Add an instrument to a vehicle.
+achievement.key=This is MINE!
+achievement.key.desc=Lock a vehicle with a key.
+achievement.fuel_pump=Pumped up!
+achievement.fuel_pump.desc=Craft a fuel pump.
+achievement.fuel=Fill 'er up!
+achievement.fuel.desc=Fuel a vehicle with a pump..
 
 manual.introduction.title=Introduction
 manual.introduction.1=Thank you for downloading Minecraft Transport Simulator, the new and improved version of Minecraft Flight Simulator!  This manual contains lots of important information, so please read closely.  It's STRONGLY recommended you read the portions on flight if you plan on piloting MTS planes, especially if you haven't had experience with planes outside of video games or simulators.
