Fixed spelling error.

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -83,7 +83,7 @@ gui.config.joystick.clear=Clear Assignment
 gui.config.joystick.axismode=Axis mode: 
 gui.config.joystick.normal=Normal
 gui.config.joystick.invert=Inverted
-gui.config.joystick.select=Chose a joystick:
+gui.config.joystick.select=Choose a joystick:
 gui.config.joystick.name=Name:
 gui.config.joystick.type=Type:
 gui.config.joystick.mapping=Mapping
